--- a/index.html
+++ b/index.html
@@ -21,28 +21,40 @@
       line-height: 1.6;
     }
     header {
-      background-color: #111827;
+      background: linear-gradient(to right, #1e3a8a, #3b82f6);
       color: white;
-      padding: 2rem;
+      padding: 2.5rem 1rem;
       text-align: center;
+      position: relative;
+    }
+    nav {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+    }
+    nav a {
+      color: white;
+      margin-left: 15px;
+      text-decoration: none;
+      font-weight: 600;
     }
     header h1 {
-      font-size: 2rem;
+      font-size: 2.5rem;
       margin-bottom: 0.5rem;
     }
     header p {
-      font-size: 1rem;
-      color: #cbd5e1;
+      font-size: 1.1rem;
+      color: #e0e7ff;
     }
     section {
       padding: 2rem;
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
     }
     h2 {
-      font-size: 1.5rem;
+      font-size: 2rem;
       margin-bottom: 1rem;
-      color: #111827;
+      color: #1e3a8a;
     }
     ul {
       list-style: none;
@@ -74,16 +86,87 @@
       display: inline-block;
       margin-top: 1rem;
     }
+    .testimonials {
+      background-color: #f3f4f6;
+      padding: 2rem;
+      margin-top: 2rem;
+      border-top: 2px solid #3b82f6;
+    }
+    .testimonial {
+      margin-bottom: 1.5rem;
+      font-style: italic;
+      color: #374151;
+    }
+    .formulario {
+      padding: 2rem;
+      background-color: #e0e7ff;
+      margin: 2rem auto;
+      max-width: 900px;
+      border-radius: 8px;
+    }
+    .formulario form {
+      display: flex;
+      flex-direction: column;
+    }
+    .formulario label {
+      margin: 0.5rem 0 0.25rem;
+      font-weight: 600;
+    }
+    .formulario input,
+    .formulario textarea {
+      padding: 0.75rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      margin-bottom: 1rem;
+    }
+    .formulario button {
+      background-color: #1e3a8a;
+      color: white;
+      padding: 0.75rem;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+    }
     footer {
       text-align: center;
       padding: 1rem;
       font-size: 0.875rem;
       background-color: #e5e7eb;
     }
+    footer a {
+      margin: 0 10px;
+      color: #1e3a8a;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    #whatsapp-float {
+      position: fixed;
+      width: 60px;
+      height: 60px;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25d366;
+      color: white;
+      border-radius: 50px;
+      text-align: center;
+      font-size: 30px;
+      box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+      z-index: 100;
+    }
+    #whatsapp-float i {
+      margin-top: 15px;
+    }
   </style>
 </head>
 <body>
   <header>
+    <nav>
+      <a href="#">Início</a>
+      <a href="#servicos">Serviços</a>
+      <a href="#clientes">Clientes</a>
+      <a href="#contato">Contato</a>
+    </nav>
     <h1>Raro Digital</h1>
     <p>Marketing e Tráfego Pago para Negócios em Todo o Brasil</p>
   </header>
@@ -93,7 +176,7 @@
     <p>A Raro Digital é uma agência de marketing digital especializada em tráfego pago, Google Ads, Instagram e estratégias para atrair clientes todos os dias. Atendemos empresas, prestadores de serviços e comércios locais de forma online, com foco total em resultados reais.</p>
   </section>
 
-  <section>
+  <section id="servicos">
     <h2>O que Fazemos</h2>
     <ul>
       <li>Gestão de Anúncios no Google e Instagram</li>
@@ -109,6 +192,29 @@
     <p>Atendemos clientes de todo o Brasil, com presença local nas regiões de Pedra de Guaratiba, Campo Grande, Santa Cruz e demais bairros da Zona Oeste do Rio de Janeiro.</p>
   </section>
 
+  <section id="clientes" class="testimonials">
+    <h2>O que dizem nossos clientes</h2>
+    <div class="testimonial">“Comecei a anunciar com a Raro Digital e já nos primeiros dias vieram clientes pelo Google. Atendimento excelente e transparente!” – Fernanda, Estética RJ</div>
+    <div class="testimonial">“O suporte é direto no WhatsApp e as campanhas realmente funcionam. Estou muito satisfeito!” – Rafael, Reboque Zona Oeste</div>
+    <div class="testimonial">“Finalmente uma agência que entrega resultado. Parabéns pelo trabalho!” – Luana, Loja de Roupas</div>
+  </section>
+
+  <section id="contato" class="formulario">
+    <h2>Entre em Contato</h2>
+    <form action="https://formspree.io/f/meqynqzk" method="POST">
+      <label for="nome">Nome</label>
+      <input type="text" id="nome" name="nome" required>
+
+      <label for="email">E-mail</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="mensagem">Mensagem</label>
+      <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
+
+      <button type="submit">Enviar</button>
+    </form>
+  </section>
+
   <div class="cta">
     <h2>Quer atrair mais clientes com marketing digital?</h2>
     <p>Fale com um especialista agora mesmo e receba um diagnóstico gratuito.</p>
@@ -116,7 +222,13 @@
   </div>
 
   <footer>
-    &copy; 2025 Raro Digital – Todos os direitos reservados.
+    &copy; 2025 Raro Digital – Todos os direitos reservados.<br>
+    <a href="https://www.instagram.com/rarodigital_" target="_blank">Instagram</a>
+    <a href="https://www.tiktok.com/@rarodigital" target="_blank">TikTok</a>
   </footer>
+
+  <a id="whatsapp-float" href="https://wa.me/5521979143631?text=Ol%C3%A1!%20Vi%20o%20perfil%20da%20Raro%20Digital%20e%20gostaria%20de%20saber%20mais%20sobre%20como%20atrair%20clientes%20com%20tr%C3%A1fego%20pago%20e%20marketing%20digital.%20%F0%9F%9A%80" target="_blank">
+    <i>📞</i>
+  </a>
 </body>
 </html>
