--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 </head>
 <body>
   <header data-aos="fade-down">
-    <img src="https://rarodigital.github.io/assets/logo.png" alt="Logo Raro Digital" class="logo" />
+    <img src="https://rarodigital.github.io/logo.png" alt="Logo Raro Digital" class="logo" />
     <nav>
       <a href="#">Início</a>
       <a href="#servicos">Serviços</a>
